--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -48,7 +48,7 @@ jobs:
       uses: actions/upload-artifact@v3.1.2
       with:
         # Artifact name
-        name: DebugAmsi.exe
+        name: xfsc.exe
         if-no-files-found: error
         # A file, directory or wildcard pattern that describes what to upload
         path: ${{ github.workspace }}/**/xfsc.exe
